[gd_scene load_steps=17 format=4 uid="uid://dd3mkrk8qukie"]

[ext_resource type="Script" uid="uid://b4kaxmpq7ya8q" path="res://script/game.gd" id="1_lbhrr"]
[ext_resource type="Texture2D" uid="uid://b0yp57dmp1r23" path="res://assets/sprites/inside-house.png" id="2_iywne"]
[ext_resource type="Texture2D" uid="uid://da3mw1dupxqbq" path="res://assets/sprites/StartButton2.png" id="2_kvpfn"]
[ext_resource type="Texture2D" uid="uid://c41jkf66ip1it" path="res://assets/sprites/ground.png" id="2_yqjtg"]
[ext_resource type="Texture2D" uid="uid://cpveccd8n04sl" path="res://assets/sprites/StartButton1.png" id="3_dinhu"]
[ext_resource type="Texture2D" uid="uid://phh5gpegebdd" path="res://assets/sprites/CharactersButton1.png" id="4_kvuet"]
[ext_resource type="PackedScene" uid="uid://cjicxnktuy344" path="res://scenes/bellist.tscn" id="4_lbhrr"]
[ext_resource type="PackedScene" uid="uid://dsqshd1sdl1jf" path="res://scenes/red_house.tscn" id="5_iywne"]
[ext_resource type="Texture2D" uid="uid://55l8lc845274" path="res://assets/sprites/CharactersButton2.png" id="5_trtic"]
[ext_resource type="Texture2D" uid="uid://hky2svb3bcp7" path="res://assets/sprites/Exit1.png" id="6_ir15t"]
[ext_resource type="Texture2D" uid="uid://ddoo6carvvded" path="res://assets/sprites/Exit2.png" id="7_ca42v"]
[ext_resource type="PackedScene" uid="uid://b83hwoltxpxrq" path="res://scenes/fade_transition.tscn" id="12_dinhu"]
[ext_resource type="Script" uid="uid://3inedt7vwkw7" path="res://script/camera_2d.gd" id="12_kvuet"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p57ef"]
texture = ExtResource("2_iywne")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
7:2/0 = 0
7:3/0 = 0
6:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yqjtg"]
texture = ExtResource("2_yqjtg")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
3:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/next_alternative_id = 2
0:3/0 = 0
0:3/1 = 1
0:3/1/z_index = 6
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0

[sub_resource type="TileSet" id="TileSet_u5sy4"]
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 2
sources/0 = SubResource("TileSetAtlasSource_p57ef")
sources/1 = SubResource("TileSetAtlasSource_yqjtg")

[node name="game" type="Node2D"]
script = ExtResource("1_lbhrr")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_u5sy4")
format = 2

[node name="background" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AADt//n/AQAFAAAAAADu//n/AQAFAAAAAADv//n/AQAFAAAAAADw//n/AQAFAAAAAADx//n/AQAFAAAAAADy//n/AQAFAAAAAADz//n/AQAFAAAAAAD0//n/AQAFAAAAAAD1//n/AQAFAAAAAADt//j/AQAEAAAAAADu//j/AQAEAAAAAADv//j/AQAEAAAAAADw//j/AQAEAAAAAADx//j/AQAEAAAAAADy//j/AQAEAAAAAADz//j/AQAEAAAAAAD0//j/AQAEAAAAAAD1//j/AQAEAAAAAADt//r/AQAFAAEAAADu//r/AQAFAAEAAADv//r/AQAFAAEAAADw//r/AQAFAAEAAADx//r/AQAFAAEAAADy//r/AQAFAAEAAADz//r/AQAFAAEAAAD0//r/AQAFAAEAAAD1//r/AQAFAAEAAADt//v/AQAFAAEAAADu//v/AQAFAAEAAADv//v/AQAFAAEAAADw//v/AQAFAAEAAADx//v/AQAFAAEAAADy//v/AQAFAAEAAADz//v/AQAFAAEAAAD0//v/AQAFAAEAAAD1//v/AQAFAAEAAADt//z/AQAFAAIAAADu//z/AQAFAAIAAADw//z/AQAFAAIAAADx//z/AQAFAAIAAADy//z/AQAFAAIAAADz//z/AQAFAAIAAAD0//z/AQAFAAIAAAD1//z/AQAFAAIAAADv//z/AQAFAAIAAADt//3/AQAFAAMAAADu//3/AQAFAAMAAADv//3/AQAFAAMAAADw//3/AQAFAAMAAADx//3/AQAFAAMAAADy//3/AQAFAAMAAADz//3/AQAFAAMAAAD0//3/AQAFAAMAAAD1//3/AQAFAAMAAADt//7/AQAFAAMAAADt////AQAFAAMAAADu//7/AQAFAAMAAADu////AQAFAAMAAADv//7/AQAFAAMAAADv////AQAFAAMAAADw//7/AQAFAAMAAADw////AQAFAAMAAADx//7/AQAFAAMAAADx////AQAFAAMAAADy//7/AQAFAAMAAADy////AQAFAAMAAADz//7/AQAFAAMAAADz////AQAFAAMAAAD0//7/AQAFAAMAAAD0////AQAFAAMAAAD1//7/AQAFAAMAAAD1////AQAFAAMAAAA=")
tile_set = SubResource("TileSet_u5sy4")

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StartButton" type="TextureButton" parent="Buttons"]
layout_mode = 0
offset_left = -235.0
offset_top = -103.0
offset_right = -171.0
offset_bottom = -87.0
texture_normal = ExtResource("2_kvpfn")
texture_hover = ExtResource("3_dinhu")

[node name="CharactersButton" type="TextureButton" parent="Buttons"]
layout_mode = 0
offset_left = -237.0
offset_top = -87.0
offset_right = -173.0
offset_bottom = -71.0
texture_normal = ExtResource("4_kvuet")
texture_hover = ExtResource("5_trtic")

[node name="ExitButton" type="TextureButton" parent="Buttons"]
layout_mode = 0
offset_left = -249.0
offset_top = -72.0
offset_right = -185.0
offset_bottom = -56.0
texture_normal = ExtResource("6_ir15t")
texture_hover = ExtResource("7_ca42v")

[node name="Bellist" parent="." instance=ExtResource("4_lbhrr")]
position = Vector2(-274, -72)

[node name="red house" parent="." instance=ExtResource("5_iywne")]
position = Vector2(-268, -48.999996)
rotation = -0.12915437

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-235, -79)
zoom = Vector2(9, 9)
limit_left = -302
limit_top = -128
limit_right = -160
limit_bottom = -20
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 0.2
script = ExtResource("12_kvuet")

[node name="fade_transition" parent="." instance=ExtResource("12_dinhu")]
visible = false

[node name="FadeTimer" type="Timer" parent="fade_transition"]

[connection signal="pressed" from="Buttons/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Buttons/CharactersButton" to="." method="_on_characters_button_pressed"]
[connection signal="pressed" from="Buttons/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="mouse_entered" from="Bellist" to="." method="_on_bellist_mouse_entered"]
[connection signal="mouse_exited" from="Bellist" to="." method="_on_bellist_mouse_exited"]
[connection signal="timeout" from="fade_transition/FadeTimer" to="." method="_on_fade_timer_timeout"]
